Update code to work with JDK 20 EA build 27 (changes from JEP 434).